# Raspberry_Ham_Keypad

./: .checkov.yml  .gitignore  .yamllint.yml  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ansible/: .ansible-lint  .yamllint  README.md  ansible.cfg  deploy.yml  inventory.example.yml  run.sh
ansible/roles/radio_key_daemon/: README.md
ansible/roles/radio_key_daemon/defaults/: main.yml
ansible/roles/radio_key_daemon/handlers/: main.yml
ansible/roles/radio_key_daemon/meta/: argument_specs.yml  main.yml
ansible/roles/radio_key_daemon/molecule/default/: converge.yml  molecule.yml  verify.yml
ansible/roles/radio_key_daemon/tasks/: main.yml
ansible/roles/radio_key_daemon/templates/: radio-key-daemon.service.j2  rigctld.default.j2  rigctld.service.j2
ansible/templates/: radio-key-daemon.service.j2  rigctld.default.j2
docs/diagrams/: ansible-deploy-flow.md  cw-beacon-flow.md  input-device-selection-flow.md  web-interface-flow.md
docs/plans/: 2026-05-11-radio-key-daemon-design.md  2026-05-11-radio-key-daemon-implementation.md
ftdx10/: README.md  beacon.sh  ftdx10_cat.py  ftdx10_keypad_full_config.yaml
radio_key_daemon/: __init__.py  __main__.py  actions.py  bindings_visualizer.py  config.py  daemon.py  devices.py  keys.py  logging_setup.py  web.py
scripts/: list-devices  test-keyscan
systemd/: radio-key-daemon.service  rigctld.service
tests/: test_actions.py  test_bindings_visualizer.py  test_cli_bindings.py  test_config.py  test_daemon.py  test_devices.py  test_keys.py  test_web.py
