[project]
name = "radio-key-daemon"
version = "0.1.0"
description = "Userspace evdev keyboard daemon for radio station macro keys"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evdev>=1.7.1; sys_platform == 'linux'",
    "PyYAML>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["radio_key_daemon"]

[project.scripts]
radio-key-daemon = "radio_key_daemon.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
